# cpsl_datasets

./: .gitignore  .gitmodules  README.md  cpsl_ds.py  map_handler.py  pyproject.toml
cpsl_datasets/: athena_uav_ds.py  cpsl_ds.py  gnn_node_ds.py
cpsl_datasets/plotters/: cpsl_plotter.py
notebooks/: athena_uav_ds_test.ipynb  dataset_viewer.ipynb
