[tool.poetry]
name = "cpsl_datasets"
version = "0.1.0"
description = ""
authors = ["David Hunt <dmh89@duke.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.25"
matplotlib = "^3.8.2"
imageio = {extras = ["ffmpeg"], version = "^2.33.1"}
opencv-python = ">4.7, <4.9.0.80"
poetry-dotenv-plugin = "^0.2.0"
SciPy = "^1.11.4"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"

# Optional dependencies
geometries = {path="./submodules/geometries/",develop=true, optional = true}


[tool.poetry.extras]
submodules = [
    "geometries"
]

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
bandit = "^1.7"
black = "~22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"